--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "mongoose": "^8.9.0",
     "nodemon": "^3.1.7",
     "openai": "^4.76.3",
-    "puppeteer": "^23.10.1",
+    "puppeteer": "24.32.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.34.2"
   }
